--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,18 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.0'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.0'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.0'
 }
 
 test {
